# springer_downloader

./: .gitignore  Makefile  README.md  download.py  pyproject.toml  requirements.txt
demo/: Makefile  README.md  demo.py  download-catalog.cast  list-books-long.cast  list-books.cast  list-catalog-long.cast  list-catalog.cast  list-packages-long.cast  long-demo.cast
demo/animations/: Makefile  demo.py  download-books.cast  download-package.cast  get-default-catalog.cast  list-books-long.cast  list-packages.cast  set-default-catalog.cast
springer/: __async__.py  __init__.py  __main__.py  catalog.py  constants.py  file_format.py  textbook.py  urls.py
tests/: conftest.py
tests/unit/: test_catalog.py  test_constants.py  test_textbook.py
