[tool.poetry]
name = "springer"
version = "0.7.4"
description = "Bulk Springer Textbook Downloader"
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]
license = "Apache-2.0"
readme="README.md"
repository="http://github.com/JnyJny/springer_downloader"

[tool.poetry.scripts]
springer="springer.__main__:cli"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
xlrd = "^1.2.0"
requests = "^2.23.0"
typer = "^0.1.1"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
typer = "^0.1.1"
black = "^19.10b0"
typer-cli = "^0.0.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
